Time: 9 ms (43.81%), Space: 46.4 MB (93.84%) - LeetHub